--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,7 @@ body
   background-color:#d5f4e6;
   font-family: 'Merriweather', serif;
 }
-.picture
-{
-  margin-top:100px;
-  margin-left:auto;
-  margin-right:auto;
-  width:50%;
-}
+
 .intro
 {
 
@@ -26,28 +20,28 @@ body
 }
 .profile
 {
-  width:25%;
-  padding-left:500px;
+  width:20%;
+  padding-left:40%;
 }
 .E-image
 {
-  width:20%;
-  padding-left:530px;
+  width:15%;
+  padding-left:42%;
 }
 .H-image
 {
-  width:20%;
-  padding-left:530px;
+  width:15%;
+  padding-left:42%;
 }
 .J-image
 {
-  width:20%;
-  padding-left:530px;
+  width:15%;
+  padding-left:42%;
 }
 .S-image
 {
-  width:20%;
-  padding-left:530px;
+  width:15%;
+  padding-left:42%;
 }
 h1
 {
@@ -65,11 +59,11 @@ p
 }
 .table1
 {
-  margin-left:540px;
+  margin-left:42%;
 }
 .table2
 {
-  margin-left:580px;
+  margin-left:44%;
 }
 .bottom
 {
@@ -88,7 +82,7 @@ h3
 }
 ol
 {
-  margin-left:590px;
+  margin-left:44%;
 }
 
 hr
@@ -101,7 +95,7 @@ hr
   width:4%;
 }
 ul{
-  margin-left:540px;
+  margin-left:40%;
 }
 
 
@@ -111,7 +105,7 @@ h2{color:red;}
  color:red;
 }
 .btn {
-  margin-left:560px;
+  margin-left:43%;
   background: #30e3cb;
   background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
@@ -139,7 +133,7 @@ h2{color:red;}
   text-decoration: none;
 }
 .btn2 {
-  margin-left:590px;
+  margin-left:45%;
   background: #30e3cb;
   background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
